--- a/find_all_here/find_all_here/MainPage.xaml
+++ b/find_all_here/find_all_here/MainPage.xaml
@@ -24,21 +24,25 @@
                 <Label x:Name="lbl_estado" Text="" FontSize="16" Padding="30,0,30,0"/>
             </StackLayout>
         </ScrollView>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
+        <Frame BackgroundColor="#2196F3" Padding="0" CornerRadius="0">
+            <StackLayout>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
                     <Button Grid.Column="0" Text="Inicio"></Button>
-                </Grid.ColumnDefinitions>
-                
-            </Grid>
+                    <Button Grid.Column="1" Text="Inicio"></Button>
+                    <Button Grid.Column="2" Text="Inicio"></Button>
+                    <Button Grid.Column="3" Text="Inicio"></Button>
+                </Grid>
+            </StackLayout>
         </Frame>
         
 
