--- a/find_all_here/find_all_here/Home.xaml
+++ b/find_all_here/find_all_here/Home.xaml
@@ -2,79 +2,149 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="find_all_here.Home"
-             Title="FIND ALL HERE">
+             Title="INICIO">
 
-    <StackLayout BackgroundColor="#111111">
-        <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+
+    <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#101010">
+        <StackLayout Padding="0">
+            <Grid Padding="10" Background="{StaticResource bg-container}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <ImageButton Grid.Row="0" Grid.Column="0"
+                    VerticalOptions="Center" HorizontalOptions="Center"
+                    WidthRequest="35" HeightRequest="35"
+                    BackgroundColor="{StaticResource bg-profile}"
+                    Source="" CornerRadius="250"/>
+                <Button Grid.Row="0" Grid.Column="1" Text="Agrega un producto"
+                    BackgroundColor="{StaticResource bg-container}"
+                    TextColor="{StaticResource lbl-primary}" TextTransform="None"
+                    FontAttributes="None" FontSize="12" HeightRequest="35"
+                    BorderWidth="1" BorderColor="{StaticResource bg-profile}"
+                    VerticalOptions="Center" HorizontalOptions="StartAndExpand"
+                    WidthRequest="500" Margin="10,0"
+                    CornerRadius="25" Clicked="BtnAdd_Clicked"/>
+                <Button Grid.Row="0" Grid.Column="2" Text="SALIR"
+                    BackgroundColor="#33fc424a"
+                    TextColor="#fc424a" TextTransform="None"
+                    FontAttributes="None" FontSize="12" HeightRequest="35"
+                    VerticalOptions="Center" HorizontalOptions="Center"
+                    CornerRadius="25"/>
+            </Grid>
             <StackLayout>
-                <Grid BackgroundColor="#222222" Margin="10" Padding="20" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="8*"/>
-                        <RowDefinition Height="40"/>
-                        <RowDefinition Height="20"/>
-                        <RowDefinition Height="40"/>
-                        <RowDefinition Height="20"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="4*"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
+                <Frame Background="{StaticResource bg-container}"
+                        Margin="0,2" Padding="0"
+                        HasShadow="True" CornerRadius="0">
+                    <StackLayout>
+                        <Grid Margin="10,10,10,0" Padding="0">
+                            <Grid.RowDefinitions >
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <ImageButton Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+                                VerticalOptions="Center"
+                                Source=""
+                                CornerRadius="250" WidthRequest="40" HeightRequest="40" BackgroundColor="{StaticResource bg-profile}"/>
+                            <Frame Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
+                                CornerRadius="0" Margin="0" Padding="10,0,0,0"
+                                BackgroundColor="Transparent"
+                                HorizontalOptions="Start">
+                                <Label Text="Carlos Manuel Gamboa Palomino" TextColor="#fff"
+                                        Padding="0" FontSize="14" FontAttributes="Bold"
+                                        HorizontalOptions="Center" VerticalOptions="Center">
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding BtnAdd_Clicked}" />
+                                    </Label.GestureRecognizers>
+                                </Label>
+                            </Frame>
+                            <Label Grid.Column="3" Grid.Row="0"  Padding="10,0,0,0"
+                                FontSize="12" TextDecorations="None"
+                                TextColor="{StaticResource lbl-primary}"
+                                VerticalOptions="Center" HorizontalOptions="End"
+                                Text="27 de mar. 2021"/>
+                            <Label Grid.Column="1" Grid.Row="1"
+                                VerticalOptions="Center" HorizontalOptions="StartAndExpand" Margin="0"
+                                Padding="10,0,0,0" VerticalTextAlignment="Center" HorizontalTextAlignment="Start">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <FormattedString.Spans>
+                                            <Span Text="S/12.50"
+                                                FontAttributes="Italic" FontSize="10"
+                                                TextColor="{StaticResource lbl-secondary}"
+                                                TextDecorations="Strikethrough" />
+                                            <Span Text=" "/>
+                                            <Span Text="S/10.50"
+                                                FontAttributes="Bold" FontSize="12"
+                                                TextColor="{StaticResource lbl-primary}" />
+                                            <Span Text=" "/>
+                                            <Span Text="-5%"
+                                                FontAttributes="Bold" FontSize="10"
+                                                TextColor="{StaticResource btn-success}" />
+                                            <Span Text=" • "/>
+                                        </FormattedString.Spans>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                            <Frame Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"
+                                VerticalOptions="Center" HorizontalOptions="Start" CornerRadius="5"
+                                Margin="0" Padding="0" BackgroundColor="{StaticResource btn-info-outline}">
+                                <Label Text="Ver productos relacionados" TextColor="{StaticResource btn-info}"
+                                        Padding="2,1.5" FontSize="12" FontAttributes="Italic"
+                                        HorizontalOptions="Center" VerticalOptions="Center">
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding BtnAdd_Clicked}" />
+                                    </Label.GestureRecognizers>
+                                </Label>
+                            </Frame>
+                        </Grid>
+                        <Frame HeightRequest="1" Padding="0" Margin="50,0,0,0" BackgroundColor="{StaticResource bg-profile}"/>
+                        <Label Text="Este es un pequeño comentario del producto que contiene su estado y sus tags o etiquetas"
+                            Padding="10,0,10,0" TextColor="#ffffff" />
+                        <Frame Margin="0,5,0,0" Padding="0"
+                                CornerRadius="0">
+                            <ImageButton Margin="0" Padding="0" BackgroundColor="#ffffff" CornerRadius="0"
+                                Source="https://espaciohogar.com/wp-content/uploads/2019/08/ideas-para-dejar-una-manta-en-el-sofa-sillon-ikea-1.jpg"/>
+                        </Frame>
 
-                    <Image Grid.Row="1" Grid.Column="0"
-                           Source="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png"
-                           WidthRequest="0"/>
-                    <Button Grid.Row="1" Grid.Column="1"
-                            Text="Seguir"
-                            VerticalOptions="Center" HorizontalOptions="Start"/>
-                    <Label Grid.Row="2" Grid.ColumnSpan="2" Text="@username" TextColor="#ffffff" FontAttributes="Bold" FontSize="16"/>
-                    <Label x:Name="lbl_estado" Grid.Row="3" Grid.ColumnSpan="2" Text="Sillón marrón de cuero de la edad media, bañado en fibra." FontSize="14" TextColor="#aaaaaa"/>
-                    <Label Grid.Row="4" Grid.ColumnSpan="2" Text="sillon | cuero | sillon marron" TextColor="#757575" FontSize="12"/>
-                </Grid>
+                        <Grid Margin="10,0" Padding="0" BackgroundColor="Transparent">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <!--- Estadísticas -->
+                            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+                                HorizontalOptions="Start"
+                                Text="32 vistas" TextColor="{StaticResource lbl-secondary}"/>
+                            <Label Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
+                                HorizontalOptions="End"
+                                Text="12 comentarios" TextColor="{StaticResource lbl-secondary}"/>
+                            <Frame Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="6"
+                                Padding="0" Margin="0,5,0,0" HeightRequest="1" BackgroundColor="{StaticResource bg-profile}"/>
+                            <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="0"/>
+                        </Grid>
+                    </StackLayout>
+                </Frame>
             </StackLayout>
-        </ScrollView>
-        <Frame BackgroundColor="#222222" Padding="0" CornerRadius="0">
-            <StackLayout>
-                <Grid Margin="0" Padding="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="2*"/>
-                    </Grid.ColumnDefinitions>
-
-
-                    <Button Clicked="BtnHome_Clicked" Grid.Column="0" Text="Inicio"
-                            FontSize="12" FontAttributes="Bold"
-                            BackgroundColor="#333333" TextColor="#ffffff"
-                            Image="home.svg" ContentLayout="Top,0"/>
-
-                    <Button Clicked="BtnSearch_Clicked" Grid.Column="1" Text="Búsqueda"
-                            FontSize="12" FontAttributes="Bold"
-                            BackgroundColor="#222222" TextColor="#ffffff"
-                            Image="search.svg" ContentLayout="Top,0"/>
-
-                    <Button Clicked="BtnAdd_Clicked" Grid.Column="2" Text="+"
-                            FontSize="20" FontAttributes="Bold"
-                            BackgroundColor="#2196F3" TextColor="#ffffff"
-                            CornerRadius="10" Margin="0,5"/>
-
-                    <Button Clicked="BtnInbox_Clicked" Grid.Column="3" Text="Bandeja"
-                            FontSize="12" FontAttributes="Bold"
-                            BackgroundColor="#222222" TextColor="#ffffff"
-                            Image="bell.svg" ContentLayout="Top,0"/>
-
-                    <Button Clicked="BtnProfile_Clicked" Grid.Column="4" Text="Perfil"
-                            FontSize="12" FontAttributes="Bold"
-                            BackgroundColor="#222222" TextColor="#ffffff"
-                            Image="user.svg" ContentLayout="Top,0"/>
-                </Grid>
-            </StackLayout>
-        </Frame>
-    </StackLayout>
-
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
