--- a/find_all_here/find_all_here/Inbox.xaml
+++ b/find_all_here/find_all_here/Inbox.xaml
@@ -4,21 +4,128 @@
              x:Class="find_all_here.Inbox"
              Title="BANDEJA">
     <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#101010">
-        <StackLayout  Padding="0">
+        <StackLayout BackgroundColor="#858485" Padding="0">
          
-            <StackLayout>
-                <Grid Padding="10" >
+            <StackLayout Margin="0,5,0,5">
+                <Grid Padding="5" >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="1*"/>
-                     
-
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
+                    <ImageButton Margin="0,-100,0,0" Grid.Row="0" Grid.Column="0"
+                    VerticalOptions="Center" HorizontalOptions="Center"
+                    WidthRequest="35" HeightRequest="35"
+                    BackgroundColor="{StaticResource bg-profile}"
+                    Source="" CornerRadius="250"/>
+
+                    <StackLayout BackgroundColor="#2F2F2E" Margin="5,0,0,0" Grid.Row="0" Grid.Column="1"  >
+                        <Grid Padding="10" >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="1*"/>
+                                
+                                
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                                
+                                
+                                
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Row="0"  Grid.Column="1" TextColor="#fff" FontSize="20" Margin="0,-12,0,0" Text="@username"></Label>
+                            <Label Grid.Row="0"  Grid.Column="2" TextColor="#fff" FontSize="15" Margin="0,0" Text="hace 2 minutos"></Label>
+                            <Label Grid.Row="1"  Grid.Column="1" TextColor="#fff" FontSize="16" Margin="0,-15,0,10" Text="Quiere adquirir tu producto"></Label>
+
+                            <Button Grid.Row="2" Background="Green"  Grid.Column="1" TextColor="#fff" FontSize="16" Margin="12,0,30,0" Text="Atender"></Button>
+                            <Button Grid.Row="2" Background="Red"  Grid.Column="2" TextColor="#fff" FontSize="16" Margin="0,0,-40,0" Text="Olbidar"></Button>
+                            
+                            <!--Button Grid.Row="0" Grid.Column="1" Text="Agrega un producto"
+                    BackgroundColor="{StaticResource bg-container}"
+                    TextColor="{StaticResource lbl-primary}" TextTransform="None"
+                    FontAttributes="None" FontSize="12" HeightRequest="35"
+                    BorderWidth="1" BorderColor="{StaticResource bg-profile}"
+                    
+                    CornerRadius="25" /-->
+
+                            
+
+
+                        </Grid>
+
+                    </StackLayout>
+                    
+                   
+
+
+
+                </Grid>
+
+
+
+            </StackLayout>
+            <StackLayout Margin="0,0,0,5">
+                <Grid Padding="5" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <ImageButton Margin="0,-100,0,0" Grid.Row="0" Grid.Column="0"
+                    VerticalOptions="Center" HorizontalOptions="Center"
+                    WidthRequest="35" HeightRequest="35"
+                    BackgroundColor="{StaticResource bg-profile}"
+                    Source="" CornerRadius="250"/>
+
+                    <StackLayout BackgroundColor="#2F2F2E" Margin="5,0,0,0" Grid.Row="0" Grid.Column="1"  >
+                        <Grid Padding="10" >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="1*"/>
+
+
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+
+
+
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Row="0"  Grid.Column="1" TextColor="#fff" FontSize="20" Margin="0,-12,0,0" Text="@username"></Label>
+                            <Label Grid.Row="0"  Grid.Column="2" TextColor="#fff" FontSize="15" Margin="0,0" Text="hace 2 minutos"></Label>
+                            <Label Grid.Row="1"  Grid.Column="1" TextColor="#fff" FontSize="16" Margin="0,-15,0,10" Text="Quiere adquirir tu producto"></Label>
+
+                            <Button Grid.Row="2" Background="Green"  Grid.Column="1" TextColor="#fff" FontSize="16" Margin="12,0,30,0" Text="Atender"></Button>
+                            <Button Grid.Row="2" Background="Red"  Grid.Column="2" TextColor="#fff" FontSize="16" Margin="0,0,-40,0" Text="Olbidar"></Button>
+
+                            <!--Button Grid.Row="0" Grid.Column="1" Text="Agrega un producto"
+                    BackgroundColor="{StaticResource bg-container}"
+                    TextColor="{StaticResource lbl-primary}" TextTransform="None"
+                    FontAttributes="None" FontSize="12" HeightRequest="35"
+                    BorderWidth="1" BorderColor="{StaticResource bg-profile}"
+                    
+                    CornerRadius="25" /-->
+
+
+
+
+                        </Grid>
+
+                    </StackLayout>
+
+
 
 
 
