--- a/find_all_here/find_all_here/Users.xaml
+++ b/find_all_here/find_all_here/Users.xaml
@@ -4,45 +4,28 @@
              x:Class="find_all_here.Users">
     <ContentPage.Content>
         <StackLayout Background="#111111">
-            
-            <ListView ItemsSource="{Binding Activities}" HasUnevenRows="True"
-                ItemSelected="ListView_ItemSelected" ItemTapped="ListView_ItemTapped">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <Grid Padding="10" Margin="20, 10" Background="#222222">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="*"/>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="60"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
 
-                                <Label Grid.Row="0" Grid.RowSpan="2" Text="{Binding Id}"
-                                       FontSize="28" FontAttributes="Bold" Padding="5"
-                                       BackgroundColor="#333333"  TextColor="#ffffff"
-                                       HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
-                                <Label Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Name}"
-                                       FontSize="16" FontAttributes="Bold" Padding="10,5"
-                                       TextColor="#ffffff"
-                                       VerticalTextAlignment="Center"/>
-                                <Label Grid.Row="1" Grid.Column="1" Text="{Binding Start}"
-                                       FontSize="12" FontAttributes="Italic" Padding="10,0,0,5"
-                                       TextColor="#999999"
-                                       VerticalTextAlignment="Center"/>
-                                <Label Grid.Row="1" Grid.Column="2" Text="{Binding End}" 
-                                       FontSize="12" FontAttributes="Italic" Padding="5,0,0,5"
-                                       TextColor="#999999"
-                                       VerticalTextAlignment="Center"/>
-                            </Grid>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            
+            <!-- Formulario para agregar un producto -->
+            <StackLayout Orientation="Vertical" Padding="10,10,10,10">
+                <Label Text="Agregar Usuario" FontSize="30" FontAttributes="Bold" TextColor="#FFFFFF" />
+                <StackLayout Orientation="Horizontal">
+                    <Entry x:Name="txtNombre" Placeholder="Nombre" PlaceholderColor="#FFFFFF" TextColor="#FFFFFF" BackgroundColor="#111111" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" />
+                    <Entry x:Name="txtApellido" Placeholder="Apellido" PlaceholderColor="#FFFFFF" TextColor="#FFFFFF" BackgroundColor="#111111" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" />
+                </StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <Entry x:Name="txtEmail" Placeholder="Email" PlaceholderColor="#FFFFFF" TextColor="#FFFFFF" BackgroundColor="#111111" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" />
+                    <Entry x:Name="txtPassword" Placeholder="Password" PlaceholderColor="#FFFFFF" TextColor="#FFFFFF" BackgroundColor="#111111" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" />
+                </StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <Entry x:Name="txtTelefono" Placeholder="Telefono" PlaceholderColor="#FFFFFF" TextColor="#FFFFFF" BackgroundColor="#111111" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" />
+                    <Entry x:Name="txtDireccion" Placeholder="Direccion" PlaceholderColor="#FFFFFF" TextColor="#FFFFFF" BackgroundColor="#111111" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" />
+                </StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <Entry x:Name="txtCiudad" Placeholder="Ciudad" PlaceholderColor="#FFFFFF" TextColor="#FFFFFF" BackgroundColor="#111111" HorizontalOptions="FillAndExpand
+                " VerticalOptions="FillAndExpand" />
+
+                </StackLayout>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
