--- a/find_all_here/find_all_here/Home.xaml
+++ b/find_all_here/find_all_here/Home.xaml
@@ -37,122 +37,132 @@
                     VerticalOptions="Center" HorizontalOptions="Center"
                     CornerRadius="25"/>
             </Grid>
-            <StackLayout>
-                <Frame Background="{StaticResource bg-container}"
+            <RefreshView IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+                <CollectionView
+                    
+                    SelectionMode="None">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Padding="0" >
+                                <Frame Background="{StaticResource bg-container}"
                         Margin="0,2" Padding="0"
                         HasShadow="True" CornerRadius="0">
-                    <StackLayout>
-                        <Grid Margin="10,10,10,0" Padding="0">
-                            <Grid.RowDefinitions >
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-                            <ImageButton Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+                                    <StackLayout>
+                                        <Grid Margin="10,10,10,0" Padding="0">
+                                            <Grid.RowDefinitions >
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="1*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <ImageButton Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
                                 VerticalOptions="Center" HorizontalOptions="Center"
                                 Source=""
                                 CornerRadius="250" WidthRequest="40" HeightRequest="40" BackgroundColor="{StaticResource bg-profile}"/>
-                            <Frame Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
+                                            <Frame Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
                                 CornerRadius="0" Margin="0" Padding="10,0,0,0"
                                 BackgroundColor="Transparent"
                                 HorizontalOptions="Start">
-                                <Label Text="Carlos Manuel Gamboa Palomino" TextColor="#fff"
+                                                <Label Text="Carlos Manuel Gamboa Palomino" TextColor="#fff"
                                         Padding="0" FontSize="14" FontAttributes="Bold"
                                         HorizontalOptions="Center" VerticalOptions="Center">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding BtnAdd_Clicked}" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-                            </Frame>
-                            <Label Grid.Column="3" Grid.Row="0"  Padding="10,0,0,0"
+                                                    <Label.GestureRecognizers>
+                                                        <TapGestureRecognizer Command="{Binding BtnAdd_Clicked}" />
+                                                    </Label.GestureRecognizers>
+                                                </Label>
+                                            </Frame>
+                                            <Label Grid.Column="3" Grid.Row="0"  Padding="10,0,0,0"
                                 FontSize="12" TextDecorations="None"
                                 TextColor="{StaticResource lbl-primary}"
                                 VerticalOptions="Center" HorizontalOptions="End"
                                 Text="27 de mar. 2021"/>
-                            <Label Grid.Column="1" Grid.Row="1"
+                                            <Label Grid.Column="1" Grid.Row="1"
                                 VerticalOptions="Center" HorizontalOptions="StartAndExpand" Margin="0"
                                 Padding="10,0,0,0" VerticalTextAlignment="Center" HorizontalTextAlignment="Start">
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <FormattedString.Spans>
-                                            <Span Text="S/12.50"
+                                                <Label.FormattedText>
+                                                    <FormattedString>
+                                                        <FormattedString.Spans>
+                                                            <Span Text="S/12.50"
                                                 FontAttributes="Italic" FontSize="10"
                                                 TextColor="{StaticResource lbl-secondary}"
                                                 TextDecorations="Strikethrough" />
-                                            <Span Text=" "/>
-                                            <Span Text="S/10.50"
+                                                            <Span Text=" "/>
+                                                            <Span Text="S/10.50"
                                                 FontAttributes="Bold" FontSize="12"
                                                 TextColor="{StaticResource lbl-primary}" />
-                                            <Span Text=" "/>
-                                            <Span Text="-5%"
+                                                            <Span Text=" "/>
+                                                            <Span Text="-5%"
                                                 FontAttributes="Bold" FontSize="10"
                                                 TextColor="{StaticResource btn-success}" />
-                                            <Span Text=" • "/>
-                                        </FormattedString.Spans>
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
-                            <Frame Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"
+                                                            <Span Text=" • "/>
+                                                        </FormattedString.Spans>
+                                                    </FormattedString>
+                                                </Label.FormattedText>
+                                            </Label>
+                                            <Frame Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"
                                 VerticalOptions="Center" HorizontalOptions="Start" CornerRadius="5"
                                 Margin="0" Padding="0" BackgroundColor="{StaticResource btn-info-outline}">
-                                <Label Text="Ver productos relacionados" TextColor="{StaticResource btn-info}"
+                                                <Label Text="Ver productos relacionados" TextColor="{StaticResource btn-info}"
                                         Padding="2,1.5" FontSize="12" FontAttributes="Italic"
                                         HorizontalOptions="Center" VerticalOptions="Center">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding BtnAdd_Clicked}" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-                            </Frame>
-                        </Grid>
-                        <Frame HeightRequest="1" Padding="0" Margin="50,0,0,0" BackgroundColor="{StaticResource bg-profile}"/>
-                        <Label Text="Este es un pequeño comentario del producto que contiene su estado y sus tags o etiquetas"
+                                                    <Label.GestureRecognizers>
+                                                        <TapGestureRecognizer Command="{Binding BtnAdd_Clicked}" />
+                                                    </Label.GestureRecognizers>
+                                                </Label>
+                                            </Frame>
+                                        </Grid>
+                                        <Frame HeightRequest="1" Padding="0" Margin="50,0,0,0" BackgroundColor="{StaticResource bg-profile}"/>
+                                        <Label Text="Este es un pequeño comentario del producto que contiene su estado y sus tags o etiquetas"
                             Padding="10,0,10,0" TextColor="#ffffff" />
-                        <Frame Margin="0,5,0,0" Padding="0"
+                                        <Frame Margin="0,5,0,0" Padding="0"
                                 CornerRadius="0">
-                            <ImageButton Margin="0" Padding="0" BackgroundColor="#ffffff" CornerRadius="0"
+                                            <ImageButton Margin="0" Padding="0" BackgroundColor="#ffffff" CornerRadius="0"
                                 Source="https://espaciohogar.com/wp-content/uploads/2019/08/ideas-para-dejar-una-manta-en-el-sofa-sillon-ikea-1.jpg"/>
-                        </Frame>
+                                        </Frame>
 
-                        <Grid Margin="10,0" Padding="0" BackgroundColor="Transparent">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-                            <!--- Estadísticas -->
-                            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+                                        <Grid Margin="10,0" Padding="0" BackgroundColor="Transparent">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="1*"/>
+                                                <ColumnDefinition Width="1*"/>
+                                                <ColumnDefinition Width="1*"/>
+                                                <ColumnDefinition Width="1*"/>
+                                                <ColumnDefinition Width="1*"/>
+                                                <ColumnDefinition Width="1*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                            </Grid.RowDefinitions>
+                                            <!--- Estadísticas -->
+                                            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
                                 HorizontalOptions="Start"
                                 Text="32 vistas" TextColor="{StaticResource lbl-secondary}"/>
-                            <Label Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
+                                            <Label Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
                                 HorizontalOptions="End"
                                 Text="12 comentarios" TextColor="{StaticResource lbl-secondary}"/>
-                            <Frame Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="6"
+                                            <Frame Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="6"
                                 Padding="0" Margin="0,5,0,0" HeightRequest="1" BackgroundColor="{StaticResource bg-profile}"/>
-                            <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3"
+                                            <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3"
                                 Margin="0,10,0,10" Padding="0" FontSize="12" HeightRequest="40" FontAttributes="Bold"
                                 BackgroundColor="{StaticResource btn-primary-outline}" TextColor="{StaticResource btn-primary}"
                                 Text="+ AÑADIR AL CARRITO"/>
-                            <Button Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3"
+                                            <Button Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3"
                                 Margin="0,10,0,10" Padding="0" FontSize="12" HeightRequest="40" FontAttributes="Bold"
                                 BackgroundColor="{StaticResource bg-container}" TextColor="{StaticResource lbl-primary}"
                                 Text="VER COMENTARIOS"/>
-                        </Grid>
-                    </StackLayout>
-                </Frame>
-            </StackLayout>
+                                        </Grid>
+                                    </StackLayout>
+                                </Frame>
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </RefreshView>
         </StackLayout>
     </ScrollView>
 </ContentPage>
