--- a/find_all_here/find_all_here/Search.xaml
+++ b/find_all_here/find_all_here/Search.xaml
@@ -3,60 +3,36 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="find_all_here.Search"
              Title="BUSCAR">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-            <!--Frame BackgroundColor="#202020" Padding="0" CornerRadius="0">
-                <StackLayout>
-                    <Grid Margin="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="2*"/>
-                        </Grid.ColumnDefinitions>
+    <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#101010">
+        <StackLayout  Padding="0">
+            <Frame Padding="0" CornerRadius="12">
 
+                <Entry   ClearButtonVisibility="WhileEditing"  TextColor="#000" BackgroundColor="#fff" Margin="12,12,12,12" FontSize="20" Placeholder="Buscar.........."></Entry>
+            </Frame>
+            <StackLayout>
+                <Grid Padding="10" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
 
-                        <ImageButton Grid.Column="0"
-                        BackgroundColor="#202020" HeightRequest="50" Padding="9"
-                        Source="https://cdn.icon-icons.com/icons2/1520/PNG/512/homeflat_106039.png"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
 
-                        <ImageButton Grid.Column="1"
-                        BackgroundColor="#303030" HeightRequest="50" Padding="9"
-                        Source="https://cdn.icon-icons.com/icons2/1520/PNG/512/searchzoomflat_106031.png" />
-
-                        <Frame Grid.Column="2"
-                        CornerRadius="7.5"
-                        Padding="0"
-                        BackgroundColor="#2196F3"
-                        HorizontalOptions="Center"
-                        Margin="0,5" 
-                        HasShadow="True">
-                            <Label Text="+" TextColor="#fff"
-                        Padding="12.5,5" FontSize="20" FontAttributes="Bold"
-                        HorizontalOptions="Center" VerticalOptions="Center">
-                                <Label.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding BtnAdd_Clicked}" />
-                                </Label.GestureRecognizers>
-                            </Label>
-                        </Frame>
-
-                        <ImageButton Grid.Column="3"
-                        BackgroundColor="#202020" HeightRequest="50" Padding="9"
-                        Source="https://cdn.icon-icons.com/icons2/1520/PNG/512/lightbulbflat_106023.png" />
-
-                        <ImageButton Grid.Column="4"
-                        BackgroundColor="#202020" HeightRequest="50" Padding="9"
-                        Source="https://cdn.icon-icons.com/icons2/1520/PNG/512/robotflat_106032.png"/>
-                    </Grid>
-                </StackLayout>
-            </Frame-->
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                </Grid>
+            </StackLayout>
         </StackLayout>
-    </ContentPage.Content>
+    </ScrollView>
 </ContentPage>
