--- a/find_all_here/find_all_here/LoginView.xaml
+++ b/find_all_here/find_all_here/LoginView.xaml
@@ -3,8 +3,8 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="find_all_here.LoginView"
-    BackgroundColor="{StaticResource bg-body}">
-    <ContentPage.Content>
+    BackgroundColor="{StaticResource btn-primary}">
+    <!--ContentPage.Content>
         <ScrollView>
             <Grid RowSpacing="{OnPlatform iOS=25,Android=18}">
                 <Grid.RowDefinitions>
@@ -126,5 +126,62 @@
                 </StackLayout>
             </Grid>
         </ScrollView>
+    </ContentPage.Content-->
+    <ContentPage.Content>
+        <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Image Grid.Row="0" Margin="0,30" Source="fah_logo.png" Aspect="AspectFit" HeightRequest="180" WidthRequest="80"> </Image>
+            <Frame Grid.Row="1"
+                Margin="0,0,0,-40"
+                HasShadow="True"
+                BackgroundColor="{StaticResource bg-body}"
+                BorderColor="{StaticResource bg-body}"
+                CornerRadius="25"
+                HeightRequest="700">
+                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="20" Padding="20,40,20,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0"
+                        Text="Find All Here"
+                        FontSize="32"
+                        FontAttributes="Bold"
+                        TextColor="{StaticResource lbl-primary}"
+                        HorizontalOptions="CenterAndExpand"/>
+                    <Label Grid.Row="1"
+                        Margin="0,-15,0,0"
+                        Text="Inicie sesión para continuar"
+                        TextColor="{StaticResource lbl-secondary}"
+                        HorizontalOptions="CenterAndExpand"/>
+                    <Entry Grid.Row="2" Placeholder="Usuario o correo electrónico" Margin="0,20,0,0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"></Entry>
+                    <Entry Grid.Row="3" Placeholder="Contraseña" IsPassword="True" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"></Entry>
+                    <Button Grid.Row="4" Text="Login" BackgroundColor="{StaticResource btn-primary}" CornerRadius="20"></Button>
+                    <Label Grid.Row="5" Text="or signin with" HorizontalOptions="CenterAndExpand"></Label>
+                    <StackLayout Grid.Row="6" Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Spacing="40">
+                        <Image Source="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSo626DNKJxdHM-VNRD0m7x_8Jim-r9kRalJQ" WidthRequest="30"
+                               HeightRequest="30" Aspect="AspectFit"></Image>
+                        <Image Source="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnLfAn36-LTYNHjioWgvu-0KUTIDDrW5lX_g" WidthRequest="30"
+                               HeightRequest="30" Aspect="AspectFit"></Image>
+                        <Image Source="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-icon-png-transparent-background-osteopathy-16.png" WidthRequest="30"
+                               HeightRequest="30" Aspect="AspectFit"></Image>
+                        <Image Source="https://cdn-icons-png.flaticon.com/512/174/174857.png" WidthRequest="30"
+                               HeightRequest="30" Aspect="AspectFit"></Image>
+                    </StackLayout>
+                    <Label Grid.Row="7" Text="Forget Password" FontAttributes="Bold" HorizontalOptions="CenterAndExpand"></Label>
+                    <Label Grid.Row="8" Margin="0,-10,0,0" Text="Don't have an account? Sign up here" HorizontalOptions="CenterAndExpand"></Label>
+                 </Grid>
+            </Frame>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
