--- a/find_all_here/find_all_here/HomeView.xaml
+++ b/find_all_here/find_all_here/HomeView.xaml
@@ -9,7 +9,7 @@
     x:Name="BrowseProductsPage">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="+" Command="{Binding AddProductCommand}"/>
+        <ToolbarItem Text="➕" Command="{Binding AddProductCommand}" />
         <ToolbarItem Text="🛒" Command="{Binding OpenCartCommand}" />
     </ContentPage.ToolbarItems>
     
